1.1.14.dev0
 * #49: Rename incorrect --pattern-from option to correct --patterns-from.

1.1.13
 * #54: Fix for incorrect consistency check flags passed to Borg when all three checks ("repository",
   "archives", and "extract") are specified in borgmatic configuration.
 * #48: Add "local_path" to configuration for specifying an alternative Borg executable path.
 * #49: Support for Borg experimental --patterns-from and --patterns options for specifying mixed
   includes/excludes.
 * Moved issue tracker from Taiga to integrated Gitea tracker at
   https://projects.torsion.org/witten/borgmatic/issues

1.1.12
 * #46: Declare dependency on pykwalify 1.6 or above, as older versions yield "Unknown key: version"
   rule errors.
 * Support for Borg --keep-minutely prune option.

1.1.11
 * #26: Add "ssh_command" to configuration for specifying a custom SSH command or options.
 * Fix for incorrect /etc/borgmatic.d/ configuration path probing on macOS. This problem manifested
   as an error on startup: "[Errno 2] No such file or directory: '/etc/borgmatic.d'".

1.1.10
 * Pass several Unix signals through to child processes like Borg. This means that Borg now properly
   shuts down if borgmatic is terminated (e.g. due to a system suspend).
 * #30: Support for using tilde in repository paths to reference home directory.
 * #43: Support for Borg --files-cache option for setting the files cache operation mode.
 * #45: Support for Borg --remote-ratelimit option for limiting upload rate.
 * Log invoked Borg commands when at highest verbosity level.

1.1.9
 * #17, #39: Support for user-defined hooks before/after backup, or on error.
 * #34: Improve clarity of logging spew at high verbosity levels.
 * #30: Support for using tilde in source directory path to reference home directory.
 * Require "prefix" in retention section when "archive_name_format" is set. This is to avoid
   accidental pruning of archives with a different archive name format. For similar reasons, default